# PRO-RAG

./: README.md  pyproject.toml
data/: README.md
experiments/: batch_test_20260313_165858.json  batch_test_20260316_135803.json  batch_test_20260317_145044.json  batch_test_20260318_172507.json  batch_test_20260319_204602.json  batch_test_20260320_172738.json  batch_test_20260323_180757.json  batch_test_20260324_160247.json  batch_test_20260324_163439.json  batch_test_20260324_171424.json  batch_test_20260324_175159.json  batch_test_20260324_194023.json  batch_test_20260325_194540.json  batch_test_20260326_171215.json  batch_test_20260327_203220.json  batch_test_20260328_211752.json  comparison_difference_20260326_173752.json  comprehensive_evaluation_20260320_161453.json  comprehensive_evaluation_20260320_173135.json  comprehensive_evaluation_20260324_141030.json  comprehensive_evaluation_20260324_160335.json  comprehensive_evaluation_20260324_163653.json  comprehensive_evaluation_20260324_171536.json  comprehensive_evaluation_20260324_181508.json  comprehensive_evaluation_20260325_141005.json  comprehensive_evaluation_20260325_194648.json  comprehensive_evaluation_20260326_171614.json  comprehensive_evaluation_20260328_185716.json  comprehensive_evaluation_20260328_214501.json  comprehensive_evaluation_20260330_133016.json  comprehensive_evaluation_20260401_135754.json  comprehensive_evaluation_20260403_131928.json
output/: split.py
outputs/: README.md
tests/: test_ablation_configs.py  test_add_embeddings.py  test_dataset_preparation.py  test_pnet_builder.py  (+5 more)
(+36 files in other folders)
